--- a/src/main/resources/application-psql.properties
+++ b/src/main/resources/application-psql.properties
@@ -1,6 +1,6 @@
-spring.datasource.username=pguser
-spring.datasource.password=pgpassword
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/formwisedb
+spring.datasource.username=${POSTGRES_USER:pguser}
+spring.datasource.password=${POSTGRES_PASSWORD:pgpassword}
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5433}/${POSTGRES_DB:formwise}
 spring.jpa.database=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
